PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add config options allowing to modify or delete result files from the result viewer

Phoronix Test Suite 9.4.0 Milestone 1
13 January 2020

pts-core: Allow test profile test options to expose more helper information strings
pts-core: External dependency updates
pts-core: When a test fails to install due to linker error, try to run that missing library through the external dependency handler to hint at the name
pts-core: When a test fails to install due missing header file, try to run that missing library through the external dependency handler to hint at the name
pts_Graph: Pass/fail graph formatting improvements
phodevi: Convert large RAM capacity basic strings into GB rather than large MB
phodevi: Add support for Linux 5.6+ drivetemp kernel module for ATA drive temperatures

Phoronix Test Suite 9.2.1
11 December 2019

pts-core: Fix for Debian packaging generator
pts-core: FIx for install script that could lead to Phoromatic Server instance not fully launching

Phoronix Test Suite 9.2.0-Hurdal
3 December 2019

pts-core: Fix for sensor-driven result outputs (e.g. power)
pts-core: Clean up precision handling on graphs
pts-core: Add Clear Linux external dependencies handling for when not relying upon the Clear bundles that include all known dependencies
phodevi: More robust ACPI power_meter handling
phodevi: Support reading the NVMe drive temperature via HWMON on Linux 5.5+
phoromatic: Use the new shared result viewer settings handling in common with the dynamic result viewer

Phoronix Test Suite 9.2.0 Milestone 2
13 November 2019

pts-core: Drop auto-compare sub-command since currently buggy / too server resource intensive
pts-core: Add FORCE_MIN_DURATION_PER_TEST
pts-core: Don't sort geometric mean results when the only difference between result identifiers is numeric in nature
pts-core: Allow preserving the precision of the original workload under test if not overriden by test profile