@@ -3,6 +3,8 @@ PHORONIX TEST SUITE CHANGE-LOG
 Phoronix Test Suite (Git)
 
 pts-core: Add config options allowing to modify or delete result files from the result viewer
+pts-core: Allow deleting results from the result viewer
+pts-core: Allow editing result file information from result viewer
 
 Phoronix Test Suite 9.4.0 Milestone 1
 13 January 2020
